--- a/index.html
+++ b/index.html
@@ -340,6 +340,13 @@
         </div>
       </a>
 
+      <a href="https://vimeo.com/461612689" class="with-caption image-link">
+        <img class="img-thumnail" src="images/Coffee with Miriam.jpg" />
+        <div class="title-div">
+          <span class="title">DIY Sukkah Mobile</span>
+        </div>
+      </a>
+      
       <a href="https://www.youtube.com/watch?v=mxzvDX8Ze4k" class="with-caption image-link">
         <img class="img-thumnail" src="images/Coffee with Miriam.jpg" />
         <div class="title-div">
