--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
       </a>
 
       <a href="https://vimeo.com/461612689" class="with-caption image-link">
-        <img class="img-thumnail" src="images/Coffee with Miriam.jpg" />
+        <img class="img-thumnail" src="images/DIY Sukkah Mobile.jpg" />
         <div class="title-div">
           <span class="title">DIY Sukkah Mobile</span>
         </div>
