--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <a href="https://www.youtube.com/watch?v=JQEL-WTdgmo" class="with-caption image-link" title="SIE New Sefer - inside look">
         <img class="img-thumnail" src="images/SIE.New.Sefer.inside.look.jpg"/>
           <div class="title-div">
-            <span class="title">SIE New Sefer - inside look</span>
+            <span class="title">SIE New Sefer - Inside Look</span>
         </div>
       </a>
 
@@ -106,7 +106,7 @@
       <a href="https://drive.google.com/file/d/1ovHW4Cp3ddARUWOKQSsVXipkSVm4ocGE/preview" class="with-caption image-link" >
         <img class="img-thumnail" src="images/Learn & Bring Moshiach promo 5779.jpg" />
           <div class="title-div">
-            <span class="title">Learn & Bring Moshiach promo 5779 </span>
+            <span class="title">Learn & Bring Moshiach Promo 5779 </span>
           </div>
       </a>
 
@@ -162,7 +162,7 @@
       <a href="https://www.youtube.com/watch?v=Q55f5hwejLI" class="with-caption image-link">
         <img class="img-thumnail" src="images/The.Great.Farby.Band.by.Chony.Milecki.Chabad.medley.jpg" />
         <div class="title-div">
-          <span class="title">The Great Farby Band - Chabad medley</span>
+          <span class="title">The Great Farby Band - Chabad Medley</span>
         </div>
       </a>
 
@@ -176,7 +176,7 @@
       <a href="https://www.youtube.com/watch?v=YkBnbIQqla4" class="with-caption image-link" >
         <img class="img-thumnail" src="images/A.Summer.In.Chayolei.(Official.Music.Video).jpg" />
         <div class="title-div">
-          <span class="title">A Summer In Chayolei (Official Music Video)</span>
+          <span class="title">A Summer In Chayolei</span>
         </div>
       </a>
 
@@ -231,14 +231,14 @@
       <a href="https://www.youtube.com/watch?v=ConmmmehqpE" class="with-caption image-link">
         <img class="img-thumnail" src="images/Art.of.Friendship.PROMO.2019.jpg" />
         <div class="title-div">
-          <span class="title">Art of Friendship PROMO 2019</span>
+          <span class="title">Art of Friendship Promo 2019</span>
         </div>
       </a>
 
       <a href="https://www.youtube.com/watch?v=tf6GCU_kNbc" class="with-caption image-link">
         <img class="img-thumnail" src="images/Art.of.Friendship.PROMO.2016.jpg" />
           <div class="title-div">
-            <span class="title">Art of Friendship PROMO 2016</span>
+            <span class="title">Art of Friendship Promo 2016</span>
           </div>
       </a>
 
@@ -322,7 +322,7 @@
       <a href="https://www.youtube.com/watch?v=uId-NYFO1ok" class="with-caption image-link" >
         <img class="img-thumnail" src="images/Are.you.a.Lamplighter.jpg" />
         <div class="title-div">
-          <span class="title">Are you a Lamplighter?</span>
+          <span class="title">Are You a Lamplighter?</span>
         </div>
       </a>
 
