--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
         </div>
       </a>
 
-      <a href="https://vimeo.com/302159594" class="with-caption image-link">
+      <a href="https://www.youtube.com/watch?v=8EXCo94vcQo" class="with-caption image-link">
         <img class="img-thumnail" src="images/MyShliach Farbrengen 14 Kislev.jpg" />
         <div class="title-div">
           <span class="title">MyShliach Farbrengen 14 Kislev</span>
