--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           </div>
       </a>
 
-      <a href="https://drive.google.com/file/d/1ovHW4Cp3ddARUWOKQSsVXipkSVm4ocGE/preview" class="with-caption image-link" >
+      <a href="https://www.youtube.com/watch?v=slxCW5o-_D0" class="with-caption image-link" >
         <img class="img-thumnail" src="images/Learn & Bring Moshiach promo 5779.jpg" />
           <div class="title-div">
             <span class="title">Learn & Bring Moshiach Promo 5779 </span>
@@ -117,7 +117,7 @@
         </div>
       </a>
 
-      <a href="https://drive.google.com/file/d/1VJ0heZM3hzSFbvkNycGBHVtAE-jkidL9/preview" class="with-caption image-link">
+      <a href="https://www.youtube.com/watch?v=-a5sfH2-0Yc" class="with-caption image-link">
         <img class="img-thumnail" src="images/A Chassidisher Derher Fundraising Campaign.jpg" />
         <div class="title-div">
           <span class="title">A Chassidisher Derher Fundraising Campaign</span>
@@ -152,7 +152,7 @@
         </div>
       </a>
 
-      <a href="https://drive.google.com/file/d/1MVCmy5gNsGfPDrGwCNox4XSmYw7ycHp_/preview" class="with-caption image-link">
+      <a href="https://www.youtube.com/watch?v=Eq3UUE-Jlss" class="with-caption image-link">
         <img class="img-thumnail" src="images/Charidy Campaign - Menachem Education Foundation.jpg" />
         <div class="title-div">
           <span class="title">Charidy Campaign - Menachem Education Foundation</span>
