--- a/live.html
+++ b/live.html
@@ -16,7 +16,7 @@
 
   <title>321Motion | Live </title>
   <!-- Edit URL on next line -->
-  <meta http-equiv="refresh" content="0; URL=https://www.youtube.com/embed/0HgGep-XyxE">
+  <meta http-equiv="refresh" content="0; URL=https://www.youtube.com/embed/2LkXWkwgG9c">
   <link rel="canonical" href="https://321motion.com/">
   <!-- youtube URL youtube.com/embed/ABCD -->
   <!-- vimeo URL player.vimeo.com/video/#### -->
