--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
       <a href="https://vimeo.com/207571716" class="with-caption image-link">
         <img class="img-thumnail" src="images/A Quest for Oiz Episode 4.jpg" />
         <div class="title-div">
-          <span class="title"A Quest for Oiz Episode 4</span>
+          <span class="title">A Quest for Oiz Episode 4</span>
         </div>
       </a>
       
