--- a/index.html
+++ b/index.html
@@ -262,6 +262,13 @@
           <span class="title">SEEDS</span>
         </div>
       </a>
+      
+      <a href="https://video.wixstatic.com/video/16d1b3_40c40b415ee34d48a9be9f4eb60d3c19/1080p/mp4/file.mp4" class="with-caption image-link">
+        <img class="img-thumnail" src="images/Chabad On Call.jpg" />
+        <div class="title-div">
+          <span class="title">Chabad On Call</span>
+        </div>
+      </a>
 
       <a href="https://www.youtube.com/watch?v=1yEleXfGDKw" class="with-caption image-link">
         <img class="img-thumnail" src="images/Ahavas.Yisroel.Rabbi.Avtzon.AH.jpg" />
@@ -410,12 +417,6 @@
         </div>
       </a>
       
-      <a href="https://video.wixstatic.com/video/16d1b3_40c40b415ee34d48a9be9f4eb60d3c19/1080p/mp4/file.mp4" class="with-caption image-link">
-        <img class="img-thumnail" src="images/Lag Baomer Countdown.jpg" />
-        <div class="title-div">
-          <span class="title">Lag Baomer Countdown</span>
-        </div>
-      </a>
 
     </main>
   </section>
