--- a/index.html
+++ b/index.html
@@ -116,6 +116,13 @@
           <span class="title">MLP Production Group</span>
         </div>
       </a>
+      
+      <a href="https://www.youtube.com/watch?v=Co3wqgPS4lc" class="with-caption image-link" >
+        <img class="img-thumnail" src="images/Kehos Virtual Sale.jpg" />
+        <div class="title-div">
+          <span class="title">Kehos Virtual Sale</span>
+        </div>
+      </a>
 
       <a href="https://www.youtube.com/watch?v=-a5sfH2-0Yc" class="with-caption image-link">
         <img class="img-thumnail" src="images/A Chassidisher Derher Fundraising Campaign.jpg" />
