--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
       <a href="https://www.youtube.com/watch?v=u7UV74dMpQ0" class="with-caption image-link">
         <img class="img-thumnail" src="images/A.Small.Piece.of.Heaven.(The.Siblings.Sing).jpg" />
           <div class="title-div">
-            <span class="title">A Small Piece of Heaven (The Siblings Sing)</span>
+            <span class="title">A Small Piece of Heaven</span>
           </div>
       </a>
 
