--- a/index.html
+++ b/index.html
@@ -249,6 +249,13 @@
           </div>
       </a>
 
+      <a href="https://vimeo.com/484215636" class="with-caption image-link" >
+        <img class="img-thumnail" src="images/Hat Repair.jpg" />
+        <div class="title-div">
+          <span class="title">Lab Work</span>
+        </div>
+      </a>
+      
       <a href="https://www.youtube.com/watch?v=OXB51KIkvxo" class="with-caption image-link" >
         <img class="img-thumnail" src="images/Investing.in.Futures.The.Rebbe.and.Children.jpg" />
         <div class="title-div">
