--- a/index.html
+++ b/index.html
@@ -304,6 +304,13 @@
           <span class="title">A Bubby's Friendship Circle Experience</span>
         </div>
       </a>
+      
+      <a href="http://www.youtube.com/watch?v=waidsjmTTVo" class="with-caption image-link">
+        <img class="img-thumnail" src="images/The Chai Center Preschool unstoppable.jpg" />
+        <div class="title-div">
+          <span class="title">The Chai Center Preschool #unstoppable</span>
+        </div>
+      </a>
 
       <a href="https://www.youtube.com/watch?v=7W8hEyAJEF4" class="with-caption image-link">
         <img class="img-thumnail" src="images/Chabad of Brooklyn College.jpg" />
