--- a/live.html
+++ b/live.html
@@ -20,7 +20,7 @@
   <link rel="canonical" href="https://321motion.com/">
   <!-- youtube URL youtube.com/embed/ABCD -->
   <!-- vimeo URL player.vimeo.com/video/#### -->
-  <!-- vimeo URL vimeo.com/event/####/embed -->
+  <!-- vimeo URL vimeo.com/event/####/embed/??ABC## -->
   <!-- Web URL https://321motion.com -->
 
   
