--- a/index.html
+++ b/index.html
@@ -263,6 +263,13 @@
         </div>
       </a>
 
+      <a href="https://www.youtube.com/watch?v=HXUv06gHlqk" class="with-caption image-link">
+        <img class="img-thumnail" src="images/Dear Daughter.jpg" />
+        <div class="title-div">
+          <span class="title">A Letter from G-d to every Jewish Daughter</span>
+        </div>
+      </a>
+      
       <a href="https://www.youtube.com/watch?v=AaMZNCpbDO0" class="with-caption image-link">
         <img class="img-thumnail" src="images/Stubborn Kids.jpg" />
         <div class="title-div">
