--- a/live.html
+++ b/live.html
@@ -24,15 +24,16 @@
   <!-- Web URL https://321motion.com -->
 
   
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-173552252-1"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JENQGHXK55"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-173552252-1');
+  gtag('config', 'G-JENQGHXK55');
 </script>
+
 
 </head>
 <body>
